--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/bluebird": "^3.5.32",
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.1",
     "@types/redis": "^2.8.27",
     "@types/sequelize": "^4.28.9",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "otp-generator": "^2.0.0",
