--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fast-two-sms": "^2.1.0",
+    "fast2sms": "^1.0.3",
     "nodemon": "^2.0.4",
     "otp-generator": "^2.0.0",
     "redis": "^3.0.2",
