Added Node Version

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon app.ts",
     "build": "tsc-p ."
   },
+   "engines": {
+    "node": "12.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
