--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
     "dev": "nodemon app.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "postinstall": "npm run build"
   },
    "engines": {
     "node": "12.x"
