--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc -p .",
     "postinstall": "npm run build"
   },
-   "engines": {
+  "engines": {
     "node": "12.x"
   },
   "keywords": [],
@@ -19,16 +19,20 @@
   "dependencies": {
     "@types/bluebird": "^3.5.32",
     "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.11.1",
     "@types/redis": "^2.8.27",
     "@types/sequelize": "^4.28.9",
     "@types/swagger-ui-express": "^4.1.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-two-sms": "^2.1.0",
     "fast2sms": "^1.0.3",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.4",
     "otp-generator": "^2.0.0",
     "redis": "^3.0.2",
